# dgm-template

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci-android.yml  ci-ubuntu.yml  ci-windows-ninja.yml  ci-windows.yml  cppcheck.yml  release-android.yml  release-windows.yml  static-analysis.yml
android/: CMakeLists.txt
android/gradle/: build.gradle.kts
android/infiles/: AndroidManifest.xml.in  build.gradle.kts.in  local.properties.in  styles.xml.in
assets-private/: appicon.xcf  nsis-license.txt
assets/graphics/: mrman.png.anim  tiles.png.clip
assets/levels/: dummy.json
assets/shaders/: wave.frag  wave.vert
assets/ui-themes/: Pico8.txt  TguiPico8ThemeGenerator.html
bin-android/: CMakeLists.txt  Main.cpp
bin-android/app/: build.gradle.kts.in
bin-android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.in
bin-android/cppcore/: Main.cpp
bin-windows/: .clang-tidy  CMakeLists.txt  resources.rc.in
bin-windows/src/: Main.cpp
cmake/: add-catch.cmake  cpp-init.cmake  dependencies.cmake  vars.cmake
docs/: Android.md  ApkSigning.md  AppIcons.md  Readme.md  ReleaseChecklist.md  Ui.md
lib/: CMakeLists.txt
lib/include/appstate/: AppStateGame.hpp  AppStateInputDetector.hpp  AppStateMainMenu.hpp  AppStateOptions.hpp  AppStatePause.hpp  CommonHandler.hpp  Messaging.hpp
lib/include/audio/: Jukebox.hpp  SoundChannel.hpp  SoundId.hpp  SoundPlayer.hpp
lib/include/enums/: JoystickAxisPolarity.hpp  StringId.hpp
lib/include/filesystem/: AppStorage.hpp  ResourceLoader.hpp  TiledLoader.hpp
lib/include/game/: Scene.hpp
lib/include/game/builders/: GameSceneBuilder.hpp  GameTextureAtlasBuilder.hpp
lib/include/game/definitions/: GameEvents.hpp  GameScene.hpp  GameTextureAtlas.hpp
lib/include/game/engine/: GameRulesEngine.hpp  RenderingEngine.hpp
lib/include/game/events/: EventQueue.hpp  GameEvents.hpp
lib/include/gui/: Builders.hpp  Gui.hpp  GuiBuilderFactory.hpp  GuiComponent.hpp  HeadingLevel.hpp  Sizers.hpp  TguiHelper.hpp
lib/include/gui/builders/: ButtonListBuilder.hpp  DefaultLayoutBuilder.hpp  FormBuilder.hpp  NavbarLayoutBuilder.hpp  TabbedLayoutBuilder.hpp  TableBuilder.hpp  WidgetBuilder.hpp
lib/include/input/: HwInputToStringMapper.hpp  Input.hpp  InputDetector.hpp  InputKind.hpp  InputKindToStringMapper.hpp  TouchController.hpp  VirtualCursor.hpp
lib/include/jni/: Core.hpp  DisplayMetrics.hpp  Jni.hpp  Resources.hpp
lib/include/loaders/: ResourceLoader.hpp  TiledLoader.hpp
lib/include/loaders/models/: TiledModels.hpp
lib/include/misc/: AppStorage.hpp  Box2D.hpp  CMakeVars.hpp.in  Compatibility.hpp  CoordConverter.hpp  DependencyContainer.hpp  EventQueue.hpp  FpsCounter.hpp  ResourceLoader.hpp  ShadeableRenderingPipeline2D.hpp  StringProvider.hpp
lib/include/settings/: AppSettings.hpp  AudioSettings.hpp  BindingsSettings.hpp  InputSettings.hpp  VideoSettings.hpp
lib/include/strings/: HwInputToStringMapper.hpp  InputKindToStringMapper.hpp  Language.hpp  StringId.hpp  StringProvider.hpp
lib/include/types/: Binding.hpp  BrandedType.hpp  Observable.hpp  Overloads.hpp  SemanticTypes.hpp  StringTypes.hpp
lib/private_include/localization/: EnLocalization.hpp
lib/src/appstate/: AppStateGame.cpp  AppStateInputDetector.cpp  AppStateMainMenu.cpp  AppStateOptions.cpp  AppStatePause.cpp  CommonHandler.cpp  Messaging.cpp
lib/src/audio/: Jukebox.cpp  SoundPlayer.cpp
lib/src/filesystem/: AppStorage.cpp  ResourceLoader.cpp  TiledLoader.cpp
lib/src/game/engine/: GameRulesEngine.cpp  RenderingEngine.cpp
lib/src/gui/: Gui.cpp  Sizers.cpp
lib/src/gui/builders/: ButtonListBuilder.cpp  DefaultLayoutBuilder.cpp  FormBuilder.cpp  NavbarLayoutBuilder.cpp  TabbedLayoutBuilder.cpp  TableBuilder.cpp  WidgetBuilder.cpp
lib/src/input/: Input.cpp  InputDetector.cpp  TouchController.cpp  VirtualCursor.cpp
lib/src/jni/: Core.cpp  Resources.cpp
lib/src/loaders/: ResourceLoader.cpp  TiledLoader.cpp
lib/src/misc/: AppStorage.cpp  DependencyContainer.cpp  FpsCounter.cpp  ResourceLoader.cpp  ShadeableRenderingPipeline2D.cpp  StringProvider.cpp
lib/src/strings/: StringProvider.cpp
tests/: CMakeLists.txt
tests/include/: Helper.hpp  Paths.hpp  Paths.hpp.in
tests/src/: AppStateMainMenuTests.cpp  Dummy.cpp  SanityTests.cpp  TiledLoaderTests.cpp
tests/testfiles/: tiled-map-01.json  tiled-map-02.json
